# ztunnel

./: .gitattributes  .gitignore  ARCHITECTURE.md  CODEOWNERS  Cargo.toml  Development.md  Dockerfile  Dockerfile.ztunnel-windows  Dockerifle  LOCAL.md  Makefile  Makefile.core.mk  Makefile.docker  Makefile.overrides.mk  PROFILING.md  README.md  TODO.md  WINDOWS.md  build.rs  daemonset-windows.yaml  deny.toml  local-dev-setup.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-images-ci.yaml  build-images-releases.yaml  pr-tests.yaml
benches/: README.md  basic.rs  profiler.rs  throughput.rs
boringssl-fips/: Dockerfile.v1
common/: .commonfiles.sha  Makefile.common.mk
common/scripts/: report_build_info.ps1
crates/ztunnel/: Cargo.toml  build.rs
crates/ztunnel/fuzz/fuzz_targets/: protobuf.rs
crates/ztunnel/src/: admin.rs  app.rs  lib.rs  metrics.rs  proxy.rs  time.rs
crates/ztunnel/src/assets/: dashboard.html
crates/ztunnel/src/identity/: caclient.rs  manager.rs
crates/ztunnel/src/metrics/: xds.rs
crates/ztunnel/src/proxy/: outbound.rs  socks5.rs
crates/ztunnel/src/readiness/: server.rs
crates/ztunnel/src/test_helpers/: helpers.rs  linux.rs
crates/ztunnel/src/tls/: gen-certs.sh  key.pem  root-cert.pem
crates/ztunnel/src/xds/: client.rs
crates/ztunnel/tests/: direct.rs  namespaced.rs
docker/remote-env/: Dockerfile
examples/: extension.rs  inpodserver.rs  localhost.yaml  windows-deploy.yaml  windows-hostprocess.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: baggage.rs  protobuf.rs
go-metadata/: go.mod  istio.go
go-metadata/examples/: main.go
hack/spire-test/: README.md  kind.yaml
hack/spire-test/istio/: ambient-values.yaml  ztunnel-patch.yaml
hack/spire-test/scripts/: build-spire-images.sh  build-ztunnel-image.sh  setup.sh  teardown.sh  up.sh  verify.sh
hack/spire-test/spire/: clusterspiffeids.yaml  spire-values.yaml
hack/spire-test/workloads/: test-pods.yaml
proto/: README.md  authorization.proto  brokerapi.proto  cri-api.proto  networkpolicy.proto  proxy_config.proto  spiffe_workload_api.proto  workload.proto  xds.proto  zds.proto
scripts/: benchtest.sh  local.sh  node-redirect.sh  release.sh  run-cached.sh  test-with-coverage.sh  tproxy.sh  ztunnel-redirect-inpod.sh  ztunnel-redirect.sh
src/: admin.rs  app.rs  assertions.rs  baggage.rs  cert_fetcher.rs  config.rs  container_runtime.rs  copy.rs  dns.rs  drain.rs  extensions.rs  global.rs  hyper_util.rs  identity.rs  inpod.rs  inpod_linux.rs  inpod_windows.rs  lib.rs  main.rs  metrics.rs  monitoring.rs  prost_serde.rs  proxy.rs  proxyfactory.rs  rbac.rs  readiness.rs  service.rs  signal.rs  socket.rs  state.rs  stats.rs  strng.rs  telemetry.rs  test_helpers.rs  time.rs  tls.rs  version.rs  workload.rs  xds.rs
src/admin/: mod.rs
src/dns/: forwarder.rs  handler.rs  metrics.rs  name_util.rs  resolver.rs  server.rs
src/identity/: auth.rs  broker.rs  broker_proto.rs  caclient.rs  customca.rs  manager.rs  metrics.rs  mod.rs  spireclient.rs  workload_api_proto.rs
src/identity/broker/: attestor.rs  bundles.rs  channel.rs  client.rs  svid_source.rs  workload_api.rs
src/inpod/: admin.rs  config.rs  linux.rs  metrics.rs  netns.rs  packet.rs  protocol.rs  statemanager.rs  test_helpers.rs  windows.rs  workloadmanager.rs
src/inpod/linux/: admin.rs  config.rs  packet.rs  protocol.rs  statemanager.rs  test_helpers.rs  workloadmanager.rs
src/inpod/windows/: admin.rs  config.rs  namespace.rs  protocol.rs  statemanager.rs  workloadmanager.rs
src/inpod_linux/: admin.rs  config.rs  protocol.rs  statemanager.rs  test_helpers.rs  workloadmanager.rs
src/metrics/: dns.rs  meta.rs  mod.rs  process.rs  server.rs  tokio_runtime.rs  traffic.rs  xds.rs
src/proxy/: connection_manager.rs  dns.rs  h2.rs  h2_client.rs  h2_public.rs  inbound.rs  inbound_passthrough.rs  metadata.rs  metrics.rs  mod.rs  outbound.rs  pool.rs  socks5.rs  util.rs
src/proxy/dns/: forwarder.rs  proxy.rs  resolver.rs
src/proxy/h2/: client.rs  revocation.rs  server.rs
src/readiness/: mod.rs  server.rs
src/state/: policy.rs  service.rs  workload.rs
src/test_helpers/: app.rs  asynctrace.rs  ca.rs  components.rs  dns.rs  echo.rs  helpers.rs  hyper_tower.rs  inpod.rs  inpod_linux.rs  linux.rs  mesh_config.yaml  mod.rs  namespaced.rs  netns.rs  tcp.rs  xds.rs
src/tls/: boring.rs  ca-chain.pem  ca-key.pem  ca-key2.pem  cert-chain.pem  cert.pem  certificate.rs  control.rs  crl.rs  crl_watcher.rs  csr.rs  gen-certs.sh  intermediary-cert.pem  intermediary-key.pem  istiod-cert.pem  istiod-key.pem  key.pem  lib.rs  mesh_config.rs  mock.rs  mod.rs  revocation.rs  root-cert.pem  root-cert2.pem  verifier.rs  workload.rs
src/xds/: client.rs  freshness_monitor.rs  metrics.rs  mod.rs  monitoring.rs  readiness_monitor.rs  types.rs
tests/: README.md  direct.rs  helpers.rs  namespaced.rs  proxy.rs
