[package]
name = "ztunnel"
version = "0.0.0"
edition = "2021"
rust-version = "1.77"

[features]
default = ["tls-ring"]
jemalloc = ["dep:tikv-jemallocator", "dep:jemalloc_pprof"]
tls-boring = ["dep:boring", "dep:boring-sys", "boring-rustls-provider/fips-only"]
tls-ring = ["dep:ring", "rustls/ring", "tokio-rustls/ring", "hyper-rustls/ring", "dep:rcgen"]
testing = ["dep:rcgen", "rcgen/x509-parser"] # Enables utilities supporting tests.

[lib]
path = "src/lib.rs"
bench = false

[[bin]]
name = "ztunnel"
path = "src/main.rs"
bench = false

[[bench]]
name = "throughput"
harness = false

[dependencies]
# Enabled with 'tls-boring'
boring-rustls-provider = { git = "https://github.com/janrueth/boring-rustls-provider", optional = true } #
boring = { version = "4", optional = true }
boring-sys = { version = "4", optional = true }

# Enabled with 'tls-ring'
ring = { version = "0.17", optional = true }

anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
byteorder = "1.5"
bytes = { version = "1.5", features = ["serde"] }
chrono = "0.4"
drain = "0.1"
duration-str = "0.7"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
jemalloc_pprof = { version = "0.1.0", optional = true }
tikv-jemallocator = { version = "0.5.4", features = ["profiling", "unprefixed_malloc_on_supported_platforms"], optional = true }
hashbrown = "0.14"
hickory-client = "0.24"
hickory-proto = "0.24"
hickory-resolver = "0.24"
hickory-server = { version = "0.24", features = [ "hickory-resolver" ] }
http-02 = { package = "http", version = "0.2.9" }
http-body-04 = { package = "http-body", version = "0.4" }
http-body-1 = { package = "http-body", version = "1.0.0-rc.2" }
http-body-util = "0.1"
http-types = { version = "2.12", default-features = false }
hyper = { version = "1.3", features = ["full"] }
hyper-rustls = { version = "0.27.0", default-features = false, features = ["logging", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
ipnet = { version = "2.9", features = ["serde"] }
itertools = "0.12"
keyed_priority_queue = "0.4"
libc = "0.2"
log = "0.4"
nix = { version = "0.28", features = ["socket", "sched", "uio", "fs", "ioctl", "user", "net", "mount"] }
once_cell = "1.19"
ppp = "2.2"
pprof = { version = "0.13", features = ["protobuf", "protobuf-codec", "criterion"] }
prometheus-client = { version = "0.22" }
prometheus-parse = "0.2"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
rcgen = { version = "0.13", optional = true, features = ["pem"] }
rustls = { version = "0.23", default-features = false }
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
socket2 = { version = "0.5", features = ["all"] }
textnonce = { version = "1.0" }
thiserror = "1.0"
tls-listener = { version = "0.10" }
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.11", default-features = false, features = ["prost", "codegen"] }
tower = { version = "0.4", features = ["full"] }
tower-hyper-http-body-compat = { git = "https://github.com/howardjohn/tower-hyper-http-body-compat", branch = "deps/hyper-1.0.0-snapshot1", features = ["server", "http2"] }
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
url = "2.2"
x509-parser = { version = "0.16", default-features = false }
tracing-log = "0.2"
backoff = "0.4.0"
pin-project-lite = "0.2"
pingora-pool = "0.1.0"
flurry = "0.5.0"
h2 = "0.4"
http = "1.1"
internment = { version = "0.8.3", default-features = false, features = ["arc", "serde", "deepsize"] }
deepsize = "0.2.0"
split-iter = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
netns-rs = "0.1"

[build-dependencies]
tonic-build = { version = "0.11", default-features = false, features = ["prost"] }
prost-build = "0.12"
anyhow = "1.0"
rustc_version = "0.4"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[profile.symbols-release]
inherits = "release"
debug = true

# Release optimized but without as many dependencies, suitable for incremental development
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

[dev-dependencies]
# Enable testing utils on this crate.
ztunnel = { version = "0.0.0", path = ".", default-features = false, features = ["testing"] }

criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
diff = "0.1"
local-ip-address = "0.6"
matches = "0.1"
test-case = "3.3"
oid-registry = "0.7"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
ctor = "0.2"

[patch.crates-io]
# TODO h2 0.4.5 (https://github.com/istio/ztunnel/issues/1000)
h2 = { git = "https://github.com/hyperium/h2", rev = "be129832df989bf28940da3618827e190ae64ef2" }
