[package]
name = "ztunnel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
hyper = "1.1"
libfuzzer-sys = "0.4"
prost = "0.12.1"
anyhow = "1.0.65"

[dependencies.ztunnel]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "protobuf"
path = "fuzz_targets/protobuf.rs"
test = false
doc = false

[[bin]]
name = "baggage"
path = "fuzz_targets/baggage.rs"
test = false
doc = false
