[package]
name = "ztunnel-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
hyper = "1.1"
libfuzzer-sys = "0.4"
prost = { version = "0.14", default-features = false }
anyhow = "1.0"

[dependencies.ztunnel]
path = ".."
# No default features: jemalloc's unprefixed malloc/free conflicts with the
# sanitizers cargo-fuzz/OSS-Fuzz build with (ASan heap interceptors).
default-features = false
features = ["tls-aws-lc"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "protobuf"
path = "fuzz_targets/protobuf.rs"
test = false
doc = false

[[bin]]
name = "baggage"
path = "fuzz_targets/baggage.rs"
test = false
doc = false
